<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="5dp">

        <ImageView
            android:scaleType="fitXY"
            android:id="@+id/countryImg"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/CountryImg"
            app:srcCompat="@drawable/ic_launcher_foreground" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="top|end"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">

            <Button
                android:id="@+id/favBtn"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_favorite_shadow_24dp"/>

            <TextView
                android:id="@+id/likeCountTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="#fff"
                android:layout_marginStart="10dp"
                style="@style/TextAppearance.AppCompat.Body1"/>

        </LinearLayout>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom|end">

        <TextView
            android:id="@+id/countryName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/CountryName"
            android:textColor="#F1ECEC"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/CapitalCity"
            android:textColor="#F1EEEE"
            android:textColorHint="#000000" />

        <TextView
            android:id="@+id/desciption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/CountryDesc"
            android:textColor="#FBF8F8"
            android:textStyle="bold|italic" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000"/>

</androidx.cardview.widget.CardView>